--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,20 @@
             <artifactId>common-jetty</artifactId>
         </dependency>
         <dependency>
+            <groupId>com.esrx.common</groupId>
+            <artifactId>common-dependencies</artifactId>
+            <version>12.0.0</version>
+            <type>pom</type>
+            <scope>import</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.esrx</groupId>
+            <artifactId>thirdparty-dependencies</artifactId>
+            <version>10.0.0</version>
+            <type>pom</type>
+            <scope>import</scope>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
@@ -300,128 +314,128 @@
                 <artifactId>maven-jaxb2-plugin</artifactId>
                 <version>0.14.0</version>
                 <executions>
-                  <!--  <execution>
-                        <id>createH23Request</id>
-                        <phase>generate-sources</phase>
-                        <goals>
-                            <goal>generate</goal>
-                        </goals>
-                        <configuration>
-                            <extension>true</extension>
-                            <strict>true</strict>
-                            <schemaDirectory>src/main/resources/createH23/request</schemaDirectory>
-                            <generatePackage>com.esrx.plb.fullintent.outbound.createH23.request</generatePackage>
-                            <removeOldOutput>false</removeOldOutput>
-                            <forceRegenerate>true</forceRegenerate>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>createH23Response</id>
-                        <phase>generate-sources</phase>
-                        <goals>
-                            <goal>generate</goal>
-                        </goals>
-                        <configuration>
-                            <extension>true</extension>
-                            <strict>true</strict>
-                            <schemaDirectory>src/main/resources/createH23/response</schemaDirectory>
-                            <generatePackage>com.esrx.plb.fullintent.outbound.createH23.response</generatePackage>
-                            <removeOldOutput>false</removeOldOutput>
-                            <forceRegenerate>true</forceRegenerate>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>createH24Request</id>
-                        <phase>generate-sources</phase>
-                        <goals>
-                            <goal>generate</goal>
-                        </goals>
-                        <configuration>
-                            <extension>true</extension>
-                            <strict>true</strict>
-                            <schemaDirectory>src/main/resources/createH24/request</schemaDirectory>
-                            <generatePackage>com.esrx.plb.fullintent.outbound.createH24.request</generatePackage>
-                            <removeOldOutput>false</removeOldOutput>
-                            <forceRegenerate>true</forceRegenerate>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>createH24Response</id>
-                        <phase>generate-sources</phase>
-                        <goals>
-                            <goal>generate</goal>
-                        </goals>
-                        <configuration>
-                            <extension>true</extension>
-                            <strict>true</strict>
-                            <schemaDirectory>src/main/resources/createH24/response</schemaDirectory>
-                            <generatePackage>com.esrx.plb.fullintent.outbound.createH24.response</generatePackage>
-                            <removeOldOutput>false</removeOldOutput>
-                            <forceRegenerate>true</forceRegenerate>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>domainValuesRequest</id>
-                        <phase>generate-sources</phase>
-                        <goals>
-                            <goal>generate</goal>
-                        </goals>
-                        <configuration>
-                            <extension>true</extension>
-                            <strict>true</strict>
-                            <schemaDirectory>src/main/resources/domainValues/request</schemaDirectory>
-                            <generatePackage>com.esrx.plb.fullintent.outbound.domainValues.request</generatePackage>
-                            <removeOldOutput>false</removeOldOutput>
-                            <forceRegenerate>true</forceRegenerate>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>domainValuesResponse</id>
-                        <phase>generate-sources</phase>
-                        <goals>
-                            <goal>generate</goal>
-                        </goals>
-                        <configuration>
-                            <extension>true</extension>
-                            <strict>true</strict>
-                            <schemaDirectory>src/main/resources/domainValues/response</schemaDirectory>
-                            <generatePackage>com.esrx.plb.fullintent.outbound.domainValues.response</generatePackage>
-                            <removeOldOutput>false</removeOldOutput>
-                            <forceRegenerate>true</forceRegenerate>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>validateSuperIdProductRequest</id>
-                        <phase>generate-sources</phase>
-                        <goals>
-                            <goal>generate</goal>
-                        </goals>
-                        <configuration>
-                            <extension>true</extension>
-                            <strict>true</strict>
-                            <schemaDirectory>src/main/resources/validateSuperIdProduct/request</schemaDirectory>
-                            <generatePackage>com.esrx.plb.fullintent.outbound.validateSuperIdProduct.request
-                            </generatePackage>
-                            <removeOldOutput>false</removeOldOutput>
-                            <forceRegenerate>true</forceRegenerate>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>validateSuperIdProductResponse</id>
-                        <phase>generate-sources</phase>
-                        <goals>
-                            <goal>generate</goal>
-                        </goals>
-                        <configuration>
-                            <extension>true</extension>
-                            <strict>true</strict>
-                            <schemaDirectory>src/main/resources/validateSuperIdProduct/response</schemaDirectory>
-                            <generatePackage>com.esrx.plb.fullintent.outbound.validateSuperIdProduct.response
-                            </generatePackage>
-                            <removeOldOutput>false</removeOldOutput>
-                            <forceRegenerate>true</forceRegenerate>
-                        </configuration>
-                    </execution>-->
+                    <!--  <execution>
+                          <id>createH23Request</id>
+                          <phase>generate-sources</phase>
+                          <goals>
+                              <goal>generate</goal>
+                          </goals>
+                          <configuration>
+                              <extension>true</extension>
+                              <strict>true</strict>
+                              <schemaDirectory>src/main/resources/createH23/request</schemaDirectory>
+                              <generatePackage>com.esrx.plb.fullintent.outbound.createH23.request</generatePackage>
+                              <removeOldOutput>false</removeOldOutput>
+                              <forceRegenerate>true</forceRegenerate>
+                          </configuration>
+                      </execution>
+                      <execution>
+                          <id>createH23Response</id>
+                          <phase>generate-sources</phase>
+                          <goals>
+                              <goal>generate</goal>
+                          </goals>
+                          <configuration>
+                              <extension>true</extension>
+                              <strict>true</strict>
+                              <schemaDirectory>src/main/resources/createH23/response</schemaDirectory>
+                              <generatePackage>com.esrx.plb.fullintent.outbound.createH23.response</generatePackage>
+                              <removeOldOutput>false</removeOldOutput>
+                              <forceRegenerate>true</forceRegenerate>
+                          </configuration>
+                      </execution>
+                      <execution>
+                          <id>createH24Request</id>
+                          <phase>generate-sources</phase>
+                          <goals>
+                              <goal>generate</goal>
+                          </goals>
+                          <configuration>
+                              <extension>true</extension>
+                              <strict>true</strict>
+                              <schemaDirectory>src/main/resources/createH24/request</schemaDirectory>
+                              <generatePackage>com.esrx.plb.fullintent.outbound.createH24.request</generatePackage>
+                              <removeOldOutput>false</removeOldOutput>
+                              <forceRegenerate>true</forceRegenerate>
+                          </configuration>
+                      </execution>
+                      <execution>
+                          <id>createH24Response</id>
+                          <phase>generate-sources</phase>
+                          <goals>
+                              <goal>generate</goal>
+                          </goals>
+                          <configuration>
+                              <extension>true</extension>
+                              <strict>true</strict>
+                              <schemaDirectory>src/main/resources/createH24/response</schemaDirectory>
+                              <generatePackage>com.esrx.plb.fullintent.outbound.createH24.response</generatePackage>
+                              <removeOldOutput>false</removeOldOutput>
+                              <forceRegenerate>true</forceRegenerate>
+                          </configuration>
+                      </execution>
+                      <execution>
+                          <id>domainValuesRequest</id>
+                          <phase>generate-sources</phase>
+                          <goals>
+                              <goal>generate</goal>
+                          </goals>
+                          <configuration>
+                              <extension>true</extension>
+                              <strict>true</strict>
+                              <schemaDirectory>src/main/resources/domainValues/request</schemaDirectory>
+                              <generatePackage>com.esrx.plb.fullintent.outbound.domainValues.request</generatePackage>
+                              <removeOldOutput>false</removeOldOutput>
+                              <forceRegenerate>true</forceRegenerate>
+                          </configuration>
+                      </execution>
+                      <execution>
+                          <id>domainValuesResponse</id>
+                          <phase>generate-sources</phase>
+                          <goals>
+                              <goal>generate</goal>
+                          </goals>
+                          <configuration>
+                              <extension>true</extension>
+                              <strict>true</strict>
+                              <schemaDirectory>src/main/resources/domainValues/response</schemaDirectory>
+                              <generatePackage>com.esrx.plb.fullintent.outbound.domainValues.response</generatePackage>
+                              <removeOldOutput>false</removeOldOutput>
+                              <forceRegenerate>true</forceRegenerate>
+                          </configuration>
+                      </execution>
+                      <execution>
+                          <id>validateSuperIdProductRequest</id>
+                          <phase>generate-sources</phase>
+                          <goals>
+                              <goal>generate</goal>
+                          </goals>
+                          <configuration>
+                              <extension>true</extension>
+                              <strict>true</strict>
+                              <schemaDirectory>src/main/resources/validateSuperIdProduct/request</schemaDirectory>
+                              <generatePackage>com.esrx.plb.fullintent.outbound.validateSuperIdProduct.request
+                              </generatePackage>
+                              <removeOldOutput>false</removeOldOutput>
+                              <forceRegenerate>true</forceRegenerate>
+                          </configuration>
+                      </execution>
+                      <execution>
+                          <id>validateSuperIdProductResponse</id>
+                          <phase>generate-sources</phase>
+                          <goals>
+                              <goal>generate</goal>
+                          </goals>
+                          <configuration>
+                              <extension>true</extension>
+                              <strict>true</strict>
+                              <schemaDirectory>src/main/resources/validateSuperIdProduct/response</schemaDirectory>
+                              <generatePackage>com.esrx.plb.fullintent.outbound.validateSuperIdProduct.response
+                              </generatePackage>
+                              <removeOldOutput>false</removeOldOutput>
+                              <forceRegenerate>true</forceRegenerate>
+                          </configuration>
+                      </execution>-->
                     <!--<execution>
                         <id>client_intent</id>
                         <phase>generate-sources</phase>
@@ -452,36 +466,36 @@
                             <forceRegenerate>true</forceRegenerate>
                         </configuration>
                     </execution>-->
-                  <!--  <execution>
-                        <id>HC13Request</id>
-                        <phase>generate-sources</phase>
-                        <goals>
-                            <goal>generate</goal>
-                        </goals>
-                        <configuration>
-                            <extension>true</extension>
-                            <strict>true</strict>
-                            <schemaDirectory>src/main/resources/xsd/hc13/request</schemaDirectory>
-                            <generatePackage>com.esrx.plb.fullintent.outbound.HC13.request</generatePackage>
-                            <removeOldOutput>false</removeOldOutput>
-                            <forceRegenerate>true</forceRegenerate>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>HC13Response</id>
-                        <phase>generate-sources</phase>
-                        <goals>
-                            <goal>generate</goal>
-                        </goals>
-                        <configuration>
-                            <extension>true</extension>
-                            <strict>true</strict>
-                            <schemaDirectory>src/main/resources/xsd/hc13/response</schemaDirectory>
-                            <generatePackage>com.esrx.plb.fullintent.outbound.HC13.response</generatePackage>
-                            <removeOldOutput>false</removeOldOutput>
-                            <forceRegenerate>true</forceRegenerate>
-                        </configuration>
-                    </execution>-->
+                    <!--  <execution>
+                          <id>HC13Request</id>
+                          <phase>generate-sources</phase>
+                          <goals>
+                              <goal>generate</goal>
+                          </goals>
+                          <configuration>
+                              <extension>true</extension>
+                              <strict>true</strict>
+                              <schemaDirectory>src/main/resources/xsd/hc13/request</schemaDirectory>
+                              <generatePackage>com.esrx.plb.fullintent.outbound.HC13.request</generatePackage>
+                              <removeOldOutput>false</removeOldOutput>
+                              <forceRegenerate>true</forceRegenerate>
+                          </configuration>
+                      </execution>
+                      <execution>
+                          <id>HC13Response</id>
+                          <phase>generate-sources</phase>
+                          <goals>
+                              <goal>generate</goal>
+                          </goals>
+                          <configuration>
+                              <extension>true</extension>
+                              <strict>true</strict>
+                              <schemaDirectory>src/main/resources/xsd/hc13/response</schemaDirectory>
+                              <generatePackage>com.esrx.plb.fullintent.outbound.HC13.response</generatePackage>
+                              <removeOldOutput>false</removeOldOutput>
+                              <forceRegenerate>true</forceRegenerate>
+                          </configuration>
+                      </execution>-->
                     <execution>
                         <id>client_intent</id>
                         <phase>generate-sources</phase>
